# omnidb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/omnidb/: app.py  dialects.py
src/omnidb/dbapi/: cursor.py
src/omnidb/templates/: dialects.html  index.html  queries.html
